crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@417.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_div VALUES (9,8,'.006456816440893715330247418029019114736889626790871612141686117271826070935285769018710680035004320626745647926106882508048159628931624522666638442625219959259156539178378186912871506893482633695438850964052285542425753626455183282159259999492971992739484319464700978750304962671213318202670228197968646486740006148091321740497272644910882302412140576608739962605210964504469426861972705740810533465451230811358870068391007718532021526225893542801514255726272411690175555142385382688220121052891017808391607717500701760375927811435030512071347521837090721052128992926357375527600337655573639413811262412492632491693179011503973930804928749370652038245414768103001067902012962988384812280453070895781287237746786414435546976395632454474312533482077585837153357017362048554313154580576238549196250793055676215164');"
---
InsertStmt@0..851
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_div"
  Whitespace@23..24 " "
  SelectStmt@24..849
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..849
      AConst@32..33
        Iconst@32..33 "9"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "8"
      Ascii44@35..36 ","
      AConst@36..849
        Sconst@36..849 "'.0064568164408937153 ..."
  Ascii41@849..850 ")"
  Ascii59@850..851 ";"

