crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@419.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_sub VALUES (9,9,'0');"
---
InsertStmt@0..41
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_sub"
  Whitespace@23..24 " "
  SelectStmt@24..39
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..39
      AConst@32..33
        Iconst@32..33 "9"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "9"
      Ascii44@35..36 ","
      AConst@36..39
        Sconst@36..39 "'0'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

