crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@424.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_sqrt VALUES (0,'0');"
---
InsertStmt@0..40
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..24
    Ident@12..24 "num_exp_sqrt"
  Whitespace@24..25 " "
  SelectStmt@25..38
    Values@25..31 "VALUES"
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..38
      AConst@33..34
        Iconst@33..34 "0"
      Ascii44@34..35 ","
      AConst@35..38
        Sconst@35..38 "'0'"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

