crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@427.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_sqrt VALUES (3,'7765438138915239878.949520541017683429203286303188179443533225547096446554008374834292278237558244698868300666061834105683999048386497322007336816482648302911579331582895326423063492240235074387242190187374869842856897538718280497895072291181675294000739548676781615025944675912072664211455701112700937190832332966000160156597821149428032612782336278939437593991008833233156511435294360065004167893309428565243314846456225604669764879344135321428948841659419438769652686215993544390780212859309497190065178705035652106614050448518931820975038314187040226298661787490226917902356569717171481159691409131778764973037046501816919243659681416263730519167614043077472097520207347950292377914586524327206547377189493301153212000966249655331053184913579513686655963686155890934436604123384536027235444923674128269748280097789270784333442');"
---
InsertStmt@0..869
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..24
    Ident@12..24 "num_exp_sqrt"
  Whitespace@24..25 " "
  SelectStmt@25..867
    Values@25..31 "VALUES"
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..867
      AConst@33..34
        Iconst@33..34 "3"
      Ascii44@34..35 ","
      AConst@35..867
        Sconst@35..867 "'7765438138915239878. ..."
  Ascii41@867..868 ")"
  Ascii59@868..869 ";"

